Updated UI text.
Based on matej's changes here: https://bugzilla.mozilla.org/show_bug.cgi?id=1028350#c17

--- a/static/app/scripts/templates/erase.html
+++ b/static/app/scripts/templates/erase.html
@@ -3,9 +3,13 @@
   <h2>{{#l}}Erase Device{{/l}}</h2>
 </header>
 <section>
-  <p>{{#l}}All content will be erased. Your device will no longer be able to be located or tracked.{{/l}}</p>
+  <p>{{#l}}Erasing your device will:{{/l}}</p>
 
-  <p>{{#l}}Once you erase your device you will not be able to restore this device.{{/l}}</p>
+  <ol>
+    <li>{{#l}}Delete your contacts, media, messages and installed apps{{/l}}</li>
+    <li>{{#l}}Restore the device to its factory settings{{/l}}</li>
+    <li>{{#l}}Disable Find My Device{{/l}}</li>
+  </ol>
 
   <div class="buttons">
     <button type="button" class="erase primary">{{#l}}Erase Device{{/l}}</button>
