--- a/static/app/scripts/templates/erase_confirmation.html
+++ b/static/app/scripts/templates/erase_confirmation.html
@@ -2,7 +2,7 @@
   <h2>{{#l}}Confirmation{{/l}}</h2>
 </header>
 <section>
-  <p>{{#l}}Are you sure you want to erase all your data?{{/l}}</p>
+  <p>{{#l}}Are you sure you want to erase your device?{{/l}}</p>
 </section>
 <footer>
   <div class="buttons">
