--- a/static/app/scripts/templates/lost_mode.html
+++ b/static/app/scripts/templates/lost_mode.html
@@ -10,7 +10,7 @@
     </ul>
   {{/hasPasscode}}
   <section>
-    <p>{{#l}}Enter a note that will be shown on the device.{{/l}}</p>
+    <p>{{#l}}Enter a note to show on the device:{{/l}}</p>
 
     <textarea class="note" maxlength="100" placeholder="Note (optional)">{{ note }}</textarea>
 
