--- a/static/app/scripts/templates/lost_mode_passcode.html
+++ b/static/app/scripts/templates/lost_mode_passcode.html
@@ -8,7 +8,7 @@
     <li class="active">{{#l}}Step 2{{/l}}</li>
   </ul>
   <section>
-    <p>{{#l}}Lock your device by entering a passcode:{{/l}}</p>
+    <p>{{#l}}Enter a passcode to lock your device:{{/l}}</p>
 
     <input type="text" name="passcode-1" class="passcode passcode-1" required pattern="\d{4}" maxlength="4" data-parsley-required-message="{{#l}}Passcode is required.{{/l}}" data-parsley-pattern-message="{{#l}}Passcode must be 4 digits.{{/l}}" >
 
