--- a/static/app/scripts/templates/play_sound.html
+++ b/static/app/scripts/templates/play_sound.html
@@ -3,7 +3,7 @@
   <h2>{{#l}}Ring Device{{/l}}</h2>
 </header>
 <section>
-  <p>{{#l}}This will play a sound on your device to help you find it.{{/l}}</p>
+  <p>{{#l}}Play a sound on your device to help you find it.{{/l}}</p>
 
   <div class="buttons">
     <button type="button" class="play-sound primary">{{#l}}Ring Device{{/l}}</button>
