Fixed missing {{#l}} block around placeholder text

--- a/static/app/scripts/templates/lost_mode.html
+++ b/static/app/scripts/templates/lost_mode.html
@@ -12,7 +12,7 @@
   <section>
     <p>{{#l}}Enter a note to show on the device:{{/l}}</p>
 
-    <textarea class="note" maxlength="100" placeholder="Note (optional)">{{ note }}</textarea>
+    <textarea class="note" maxlength="100" placeholder="{{#l}}Note (optional){{/l}}">{{ note }}</textarea>
 
     <div class="buttons">
       {{#hasPasscode}}
