--- a/static/app/styles/_variables.scss
+++ b/static/app/styles/_variables.scss
@@ -1,5 +1,5 @@
 // FONT FAMILIES
-$default-font-family: 'TypoPRO Fira Sans';
+$default-font-family: 'Fira Sans';
 
 // COLORS
 $anchor-color: #79c8ee;
