--- a/static/app/styles/_mixins.scss
+++ b/static/app/styles/_mixins.scss
@@ -23,3 +23,14 @@
     background-image: image-url("#{$filename}@2x.#{$extension}");
   }
 }
+
+// Kellum image replacement
+// http://www.zeldman.com/2012/03/01/replacing-the-9999px-hack-new-image-replacement/
+@mixin image-replacement($filename, $width, $height, $extension: png) {
+  @include hidpi-background-image($filename, $width $height, $extension);
+  height: $height;
+  overflow: hidden;
+  text-indent: 100%;
+  white-space: nowrap;
+  width: $width;
+}
