--- a/static/app/styles/main.css
+++ b/static/app/styles/main.css
@@ -3,8 +3,8 @@
  * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
 /* TypoPRO Fira Sans */
 @font-face {
-  font-family: 'TypoPRO Fira Sans';
-  src: url('fonts/FiraSans/FiraSans-Regular.eot?#iefix') format('embedded-opentype'), url('fonts/FiraSans/FiraSans-Regular.woff') format('woff'), url('fonts/FiraSans/FiraSans-Regular.ttf') format('truetype');
+  font-family: 'Fira Sans';
+  src: url('/fonts/FiraSans/FiraSans-Regular.eot?#iefix') format('embedded-opentype'), url('/fonts/FiraSans/FiraSans-Regular.woff') format('woff'), url('/fonts/FiraSans/FiraSans-Regular.ttf') format('truetype');
   font-style: normal;
   font-weight: normal;
   font-stretch: normal;
@@ -12,8 +12,8 @@
 
 /* TypoPRO Fira Sans Bold */
 @font-face {
-  font-family: 'TypoPRO Fira Sans';
-  src: url('fonts/FiraSans/FiraSans-Bold.eot?#iefix') format('embedded-opentype'), url('fonts/FiraSans/FiraSans-Bold.woff') format('woff'), url('fonts/FiraSans/FiraSans-Bold.ttf') format('truetype');
+  font-family: 'Fira Sans';
+  src: url('/fonts/FiraSans/FiraSans-Bold.eot?#iefix') format('embedded-opentype'), url('/fonts/FiraSans/FiraSans-Bold.woff') format('woff'), url('/fonts/FiraSans/FiraSans-Bold.ttf') format('truetype');
   font-style: normal;
   font-weight: bold;
   font-stretch: normal;
@@ -21,8 +21,8 @@
 
 /* TypoPRO Fira Sans Italic */
 @font-face {
-  font-family: 'TypoPRO Fira Sans';
-  src: url('fonts/FiraSans/FiraSans-BookItalic.eot?#iefix') format('embedded-opentype'), url('fonts/FiraSans/FiraSans-BookItalic.woff') format('woff'), url('fonts/FiraSans/FiraSans-BookItalic.ttf') format('truetype');
+  font-family: 'Fira Sans';
+  src: url('/fonts/FiraSans/FiraSans-BookItalic.eot?#iefix') format('embedded-opentype'), url('/fonts/FiraSans/FiraSans-BookItalic.woff') format('woff'), url('/fonts/FiraSans/FiraSans-BookItalic.ttf') format('truetype');
   font-style: italic;
   font-weight: normal;
   font-stretch: normal;
@@ -30,8 +30,8 @@
 
 /* TypoPRO Fira Sans Bold Italic */
 @font-face {
-  font-family: 'TypoPRO Fira Sans';
-  src: url('fonts/FiraSans/FiraSans-BoldItalic.eot?#iefix') format('embedded-opentype'), url('fonts/FiraSans/FiraSans-BoldItalic.woff') format('woff'), url('fonts/FiraSans/FiraSans-BoldItalic.ttf') format('truetype');
+  font-family: 'Fira Sans';
+  src: url('/fonts/FiraSans/FiraSans-BoldItalic.eot?#iefix') format('embedded-opentype'), url('/fonts/FiraSans/FiraSans-BoldItalic.woff') format('woff'), url('/fonts/FiraSans/FiraSans-BoldItalic.ttf') format('truetype');
   font-style: italic;
   font-weight: bold;
   font-stretch: normal;
@@ -61,7 +61,7 @@
        box-sizing: border-box; }
 
 html, body, input, select {
-  font-family: 'TypoPRO Fira Sans', sans-serif; }
+  font-family: 'Fira Sans', sans-serif; }
 
 html, body, #stage, #stage > div, #map {
   height: 100%;
@@ -100,7 +100,7 @@ a {
     width: 100%;
     z-index: 1000; }
     #stage header .menu {
-      background-image: url("../images/nav-menu.png");
+      background-image: url("/images/nav-menu.png");
       background-size: 24px 24px;
       display: block;
       height: 24px;
@@ -114,7 +114,7 @@ a {
       width: 24px; }
       @media (min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 2.6/2), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 1.3dppx) {
         #stage header .menu {
-          background-image: url("../images/nav-menu@2x.png"); } }
+          background-image: url("/images/nav-menu@2x.png"); } }
     #stage header h1 {
       color: #999;
       font-size: 24px;
@@ -150,7 +150,7 @@ a {
         font-weight: normal;
         position: relative; }
         #stage #map .locating h2::before {
-          background-image: url("../images/spinner.png");
+          background-image: url("/images/spinner.png");
           background-size: 150px 150px;
           -webkit-animation-duration: 1500ms;
                   animation-duration: 1500ms;
@@ -168,9 +168,9 @@ a {
           width: 150px; }
           @media (min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 2.6/2), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 1.3dppx) {
             #stage #map .locating h2::before {
-              background-image: url("../images/spinner@2x.png"); } }
+              background-image: url("/images/spinner@2x.png"); } }
         #stage #map .locating h2::after {
-          background-image: url("../images/spinner-binoculars.png");
+          background-image: url("/images/spinner-binoculars.png");
           background-size: 90px 90px;
           background-position: 50% 50%;
           background-repeat: no-repeat;
@@ -184,9 +184,9 @@ a {
           width: 150px; }
           @media (min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 2.6/2), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 1.3dppx) {
             #stage #map .locating h2::after {
-              background-image: url("../images/spinner-binoculars@2x.png"); } }
+              background-image: url("/images/spinner-binoculars@2x.png"); } }
     #stage #map .brand {
-      background-image: url("../images/firefoxos.png");
+      background-image: url("/images/firefoxos.png");
       background-size: 147px 30px;
       background-repeat: no-repeat;
       bottom: 38px;
@@ -198,9 +198,9 @@ a {
       z-index: 1000; }
       @media (min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 2.6/2), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 1.3dppx) {
         #stage #map .brand {
-          background-image: url("../images/firefoxos@2x.png"); } }
+          background-image: url("/images/firefoxos@2x.png"); } }
     #stage #map .pin-locating-spinner {
-      background-image: url("../images/spinner-small-animated.gif");
+      background-image: url("/images/spinner-small-animated.gif");
       background-size: 39px 39px;
       background-repeat: no-repeat;
       height: 39px;
@@ -211,7 +211,7 @@ a {
       z-index: 500; }
       @media (min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 2.6/2), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 1.3dppx) {
         #stage #map .pin-locating-spinner {
-          background-image: url("../images/spinner-small-animated@2x.gif"); } }
+          background-image: url("/images/spinner-small-animated@2x.gif"); } }
     #stage #map.leaflet-container {
       background: #fff; }
       #stage #map.leaflet-container .locating {
@@ -242,23 +242,23 @@ a {
         #stage footer .button a:active {
           background-color: #79c8ee; }
       #stage footer .button.play-sound a {
-        background-image: url("../images/icon-sound.png");
+        background-image: url("/images/icon-sound.png");
         background-size: 39px 39px; }
         @media (min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 2.6/2), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 1.3dppx) {
           #stage footer .button.play-sound a {
-            background-image: url("../images/icon-sound@2x.png"); } }
+            background-image: url("/images/icon-sound@2x.png"); } }
       #stage footer .button.lost-mode a {
-        background-image: url("../images/icon-lock.png");
+        background-image: url("/images/icon-lock.png");
         background-size: 39px 39px; }
         @media (min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 2.6/2), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 1.3dppx) {
           #stage footer .button.lost-mode a {
-            background-image: url("../images/icon-lock@2x.png"); } }
+            background-image: url("/images/icon-lock@2x.png"); } }
       #stage footer .button.erase a {
-        background-image: url("../images/icon-erase.png");
+        background-image: url("/images/icon-erase.png");
         background-size: 39px 39px; }
         @media (min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 2.6/2), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 1.3dppx) {
           #stage footer .button.erase a {
-            background-image: url("../images/icon-erase@2x.png"); } }
+            background-image: url("/images/icon-erase@2x.png"); } }
 
 #modal {
   background: #f4f4f4;
@@ -290,17 +290,17 @@ a {
       white-space: nowrap;
       width: 24px; }
     #modal header .close {
-      background-image: url("../images/nav-close.png");
+      background-image: url("/images/nav-close.png");
       background-size: 24px 24px; }
       @media (min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 2.6/2), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 1.3dppx) {
         #modal header .close {
-          background-image: url("../images/nav-close@2x.png"); } }
+          background-image: url("/images/nav-close@2x.png"); } }
     #modal header .back {
-      background-image: url("../images/nav-back.png");
+      background-image: url("/images/nav-back.png");
       background-size: 24px 24px; }
       @media (min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 2.6/2), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 1.3dppx) {
         #modal header .back {
-          background-image: url("../images/nav-back@2x.png"); } }
+          background-image: url("/images/nav-back@2x.png"); } }
   #modal .stepper {
     background: #fff;
     height: 5px;
@@ -395,39 +395,39 @@ a {
         padding: 0; }
         #modal.drawer section ul li {
           background: transparent no-repeat 16px 50%;
-          background-image: url("../images/icon-device.png");
+          background-image: url("/images/icon-device.png");
           background-size: 32px 32px;
           border-bottom: 1px solid #e0e0e0;
           list-style: none; }
           @media (min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 2.6/2), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 1.3dppx) {
             #modal.drawer section ul li {
-              background-image: url("../images/icon-device@2x.png"); } }
+              background-image: url("/images/icon-device@2x.png"); } }
           #modal.drawer section ul li.selected {
             background: transparent no-repeat left 16px top 50%;
-            background-image: url("../images/icon-device-active.png");
+            background-image: url("/images/icon-device-active.png");
             background-size: 32px 32px; }
             @media (min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 2.6/2), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 1.3dppx) {
               #modal.drawer section ul li.selected {
-                background-image: url("../images/icon-device-active@2x.png"); } }
+                background-image: url("/images/icon-device-active@2x.png"); } }
             #modal.drawer section ul li.selected a, #modal.drawer section ul li.selected span {
               background: transparent no-repeat right 16px top 50%;
-              background-image: url("../images/icon-check.png");
+              background-image: url("/images/icon-check.png");
               background-size: 24px 24px; }
               @media (min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 2.6/2), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 1.3dppx) {
                 #modal.drawer section ul li.selected a, #modal.drawer section ul li.selected span {
-                  background-image: url("../images/icon-check@2x.png"); } }
+                  background-image: url("/images/icon-check@2x.png"); } }
           #modal.drawer section ul li:last-child {
             border-bottom: 0; }
           #modal.drawer section ul li a, #modal.drawer section ul li span {
             background: transparent no-repeat right 16px top 50%;
-            background-image: url("../images/nav-forward.png");
+            background-image: url("/images/nav-forward.png");
             background-size: 24px 24px;
             color: inherit;
             display: block;
             padding: 18px 0 18px 60px; }
             @media (min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 2.6/2), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 1.3dppx) {
               #modal.drawer section ul li a, #modal.drawer section ul li span {
-                background-image: url("../images/nav-forward@2x.png"); } }
+                background-image: url("/images/nav-forward@2x.png"); } }
 
 #notifier {
   background: #f8e979;
@@ -446,11 +446,11 @@ a {
     padding-bottom: 0;
     padding-top: 94px; }
     #stage #map {
-      background-image: url("../images/bg.png");
+      background-image: url("/images/bg.png");
       background-size: 2000px 950px; }
       @media (min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 2.6/2), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 1.3dppx) {
         #stage #map {
-          background-image: url("../images/bg@2x.png"); } }
+          background-image: url("/images/bg@2x.png"); } }
     #stage footer {
       background: #fff;
       bottom: auto;
