--- a/static/app/styles/home/home.css
+++ b/static/app/styles/home/home.css
@@ -45,11 +45,11 @@ html, body, input, select {
   font-family: 'Open Sans', sans-serif; }
 
 html {
-  background-attachment: fixed;
-  background-image: -webkit-linear-gradient(top, #d1e0f3 0%, #e9eef1 100%);
-  background-image: linear-gradient(to bottom, #d1e0f3 0%, #e9eef1 100%); }
+  background: url("/images/home/bg-blue-sand.png"); }
 
 body {
+  background: url("/images/home/bg-gradient-blue-sand.png") repeat-x;
+  border-top: 2px solid #fff;
   padding: 0; }
 
 a {
@@ -85,10 +85,6 @@ h3 {
 #container #intro {
   margin-top: 100px;
   min-height: 623px; }
-  #container #intro .column {
-    float: right;
-    position: relative;
-    width: 50%; }
   #container #intro #tabzilla {
     top: -100px; }
   #container #intro #fxos-logo {
@@ -110,35 +106,19 @@ h3 {
     margin: 45px 0; }
     #container #intro #cta .sign-in {
       background: #0095dd;
+      border: 2px solid #0095dd;
       border-radius: 8px;
       color: #fff;
-      display: inline-block;
+      display: block;
       font-size: 20px;
-      padding: 12px 0;
-      text-align: center;
-      width: 220px; }
-    #container #intro #cta .sign-up {
-      display: inline-block;
-      margin-left: 20px; }
-  #container #intro img {
-    position: absolute;
-    left: -710px;
-    top: 0; }
+      padding: 10px 0;
+      text-align: center; }
 #container #features {
   margin: 60px 0;
   overflow: auto; }
   #container #features .feature {
     background-repeat: no-repeat;
-    float: left;
-    margin-bottom: 55px;
-    min-height: 141px;
-    padding-left: 160px;
-    width: 50%; }
-    #container #features .feature h3 {
-      margin-top: 8px; }
-    #container #features .feature p {
-      margin-top: 5px;
-      width: 95%; }
+    margin-bottom: 55px; }
     #container #features .feature.track {
       background-image: url("/images/home/track.png");
       background-size: 141px 141px; }
@@ -178,3 +158,99 @@ h3 {
       padding: 0; }
       #container footer .band-inner ul li {
         list-style: none; }
+
+@media only screen and (max-width: 768px) {
+  body {
+    text-align: center; }
+  h1 {
+    font-size: 36px;
+    letter-spacing: -1px; }
+  h2 {
+    font-size: 22px; }
+  #container .band .band-inner {
+    padding: 0 20px; }
+  #container #intro {
+    margin-top: 20px; }
+    #container #intro #tabzilla {
+      top: -20px; }
+    #container #intro #fxos-logo {
+      margin: 0 auto;
+      clear: both; }
+    #container #intro #hero {
+      background-image: url("/images/home/laptop-phone-mobile.png");
+      background-size: 283px 192px;
+      height: 192px;
+      overflow: hidden;
+      text-indent: 100%;
+      white-space: nowrap;
+      width: 283px;
+      margin: 40px auto 0 auto; }
+      @media (min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 2.6/2), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 1.3dppx) {
+        #container #intro #hero {
+          background-image: url("/images/home/laptop-phone-mobile@2x.png"); } }
+    #container #intro #cta .sign-up {
+      background: #0095dd;
+      border: 2px solid #0095dd;
+      border-radius: 8px;
+      color: #fff;
+      display: block;
+      font-size: 20px;
+      padding: 10px 0;
+      text-align: center;
+      background: transparent;
+      color: #0095dd;
+      margin-top: 10px; }
+    #container #intro #cta .sign-in, #container #intro #cta .sign-up {
+      width: 100%; }
+    #container #intro .get-started {
+      border-color: #9f9f9f;
+      border-style: dotted;
+      border-width: 1px 0;
+      padding: 20px 10px; }
+  #container #features .feature {
+    background-position: 50% 0;
+    padding-top: 150px; }
+  #container footer {
+    text-align: left; } }
+
+@media only screen and (min-width: 768px) {
+  #container #intro .column {
+    float: right;
+    position: relative;
+    width: 50%; }
+  #container #intro #hero {
+    background-image: url("/images/home/laptop-phone.png");
+    background-size: 992px 623px;
+    height: 623px;
+    overflow: hidden;
+    text-indent: 100%;
+    white-space: nowrap;
+    width: 992px;
+    position: absolute;
+    left: -1015px;
+    top: 0; }
+    @media (min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 2.6/2), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 1.3dppx) {
+      #container #intro #hero {
+        background-image: url("/images/home/laptop-phone@2x.png"); } }
+  #container #intro #cta {
+    bottom: -120px;
+    position: absolute;
+    width: 100%; }
+    #container #intro #cta .sign-in, #container #intro #cta .sign-up {
+      float: left;
+      width: 50%; }
+    #container #intro #cta .sign-up {
+      display: block;
+      padding: 14px 0 0 20px; }
+      #container #intro #cta .sign-up:after {
+        content: ' »'; }
+  #container #features .feature {
+    float: left;
+    min-height: 141px;
+    padding-left: 160px;
+    width: 50%; }
+    #container #features .feature h3 {
+      margin-top: 8px; }
+    #container #features .feature p {
+      margin-top: 5px;
+      width: 95%; } }
